# DroidBlaster

./: settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  droid-blaster.cpp
app/src/main/cpp/app/: droid-blaster.cpp
app/src/main/cpp/include/: ActivityHandler.h  Asteroid.h  DroidBlaster.h  EventLoop.h  GraphicsManager.h  InputHandler.hpp  Log.h  MoveableBody.hpp  PhysicsManager.h  Ship.h  Sound.hpp  SoundQueue.hpp  Sprite.hpp  SpriteBatch.hpp  StarField.hpp  TimeManager.h  Types.h
app/src/main/cpp/include/manager/: GraphicsManager.h  InputManager.hpp  PhysicsManager.h  Resource.h  SoundManager.h  TimeManager.h
app/src/main/cpp/src/: Asteroid.cpp  DroidBlaster.cpp  EventLoop.cpp  GraphicsManager.cpp  Log.cpp  MoveableBody.cpp  PhysicsManager.cpp  Ship.cpp  Sound.cpp  SoundQueue.cpp  Sprite.cpp  SpriteBatch.cpp  StarField.cpp  TimeManager.cpp
app/src/main/cpp/src/manager/: GraphicsManager.cpp  InputManager.cpp  PhysicsManager.cpp  Resource.cpp  SoundManager.cpp  TimeManager.cpp
app/src/main/java/com/mistersomov/droidblaster/: DroidBlasterActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
